...
    private lazy var productImageView: UIImageView = {
        let imageView = UIImageView()
        imageView.translatesAutoresizingMaskIntoConstraints = false

        let image = UIImage(named: "undraw_shopping_app")
        imageView.image = image
        imageView.accessibilityIdentifier = "colletion_header_imageView"
        return imageView
    }()

    private lazy var titleLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
        let button = UIButton(type: .system)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.backgroundColor = Theme.Color.black
        button.layer.cornerRadius = Theme.CornerRadius.normal
        button.layer.masksToBounds = true
        button.addTarget(self, action: #selector(exploreButtonDidTap), for: .touchUpInside)
        button.accessibilityIdentifier = "explore_button"
        return button
    }()

    private lazy var exploreButtonLabel: UILabel = {
        let label = UILabel()
        label.translatesAutoresizingMaskIntoConstraints = false
...
