...
        homeNavigationController.tabBarItem.selectedImage = UIImage(systemName: "house.fill")
        homeNavigationController.tabBarItem.accessibilityIdentifier = "home_tabBarItem"
        let homeCoordinator = HomeCoordinator(navigationController: homeNavigationController)

        let searchNavigationController = UINavigationController()
        searchNavigationController.tabBarItem.image = UIImage(systemName: "magnifyingglass")
        searchNavigationController.tabBarItem.accessibilityIdentifier = "search_tabBarItem"
        let searchCoordinator = SearchCoordinator(navigationController: searchNavigationController)

        let cartNavigationController = UINavigationController()
        cartNavigationController.tabBarItem.image = UIImage(systemName: "cart")
        cartNavigationController.tabBarItem.selectedImage = UIImage(systemName: "cart.fill")
        cartNavigationController.tabBarItem.badgeValue = AppData.cart.isEmpty ? nil : ToString(AppData.cart.count)
        cartNavigationController.tabBarItem.accessibilityIdentifier = "cart_tabBarItem"
        let cartCoordinator = CartCoordinator(navigationController: cartNavigationController)

        let profileNavigationController = UINavigationController()
        profileNavigationController.tabBarItem.image = UIImage(systemName: "person.crop.circle")
        profileNavigationController.tabBarItem.selectedImage = UIImage(systemName: "person.crop.circle.fill")
        profileNavigationController.tabBarItem.accessibilityIdentifier = "profile_tabBarItem"
...
