...
    var coordinator: SearchCoordinatorProtocol?
    var model: SearchViewModel!

    private lazy var searchBar: UISearchBar = {
        let searchBar = UISearchBar()
        searchBar.translatesAutoresizingMaskIntoConstraints = false
        searchBar.placeholder = "Search"
        searchBar.searchBarStyle = .minimal

        let toolbar = UIToolbar(
            frame: CGRect(x: 0, y: 0, width: view.frame.width, height: 44)
        )

...
            section: CompositionalLayoutSectionHelper.createSearchProductSection()
        )

        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: layout)
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        collectionView.backgroundColor = Theme.Color.backgroundColor
        collectionView.accessibilityIdentifier = "search_collectionView"
        return collectionView
    }()

    private lazy var emptyDataIconView = EmptyDataIconView(
        frame: CGRect(x: 0, y: 0, width: collectionView.bounds.width, height: collectionView.bounds.height)
    )
...
